# caos_project_games

./: CMakeLists.txt  README.md  main.cpp
battleship/: CMakeLists.txt  README.md  build.bat
battleship/.cache/clangd/index/: main.cpp.8F5EA88EBCB8693D.idx  main.cpp.A88CDA5AD72F58E8.idx
battleship/images/: README.md
battleship/include/: Board.h  Constants.h  Game.h  InputHandler.h  Menu.h  Player.h  Render.h  Ship.h
battleship/src/: Board.cpp  Game.cpp  InputHandler.cpp  Menu.cpp  Player.cpp  Render.cpp  Ship.cpp  main.cpp
hangman/: CMakeLists.txt  Game.cpp  Game.h  MainLogic.cpp  MainLogic.h  Output.cpp  Output.h  README.md  helpers.h  main.cpp
hangman/categories/: CategoryAnimal.cpp  CategoryAnimal.h  CategoryCities.cpp  CategoryCities.h  CategoryFood.cpp  CategoryFood.h  CategorySport.cpp  CategorySport.h  Dictionary.cpp  Dictionary.h
hangman/tests/: test_category.cpp  test_dictionary.cpp  test_game.cpp  test_game_extra.cpp  test_output.cpp
